2007-11-03      Ray Xu <rayx.cn@gmail.com>

        * shared/abort/simple_abort.c: Add veneer for ARM<->Thumb
        shared/irq/irq_asm.S: Add veneer for ARM<->Thumb

2007-11-06	Till Straumann <strauman@slac.stanford.edu>

	* gba/irq/irq.c: test for non-NULL-ness before calling
	'on'/'off' methods so that users don't have to provide
	no-ops if they don't want this feature.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* shared/abort/abort.c, shared/abort/simple_abort.c,
	shared/irq/irq_init.c: Code outside of cpukit should use the public
	API for rtems_interrupt_disable/rtems_interrupt_enable. By bypassing
	the public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-09-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/abort/abort.c, shared/abort/simple_abort.c: Remove incorrect
	and unneccessary prototype of printk.

2007-06-13	Ray Xu <rayx@gmail.com>

	* shared/abort/simple_abort.c: Shrink the memory requirements. Joel
	reformatted for style.

2007-06-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* acinclude.m4: Remove armulator.

2007-06-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* armulator/.cvsignore, armulator/ChangeLog, armulator/Makefile.am,
	armulator/bsp_specs, armulator/configure.ac, armulator/preinstall.am,
	armulator/clock/clockdrv.c, armulator/console/console-io.c,
	armulator/console/mon-syscalls.S, armulator/include/.cvsignore,
	armulator/include/bsp.h, armulator/include/tm27.h,
	armulator/start/start.S, armulator/startup/bspstart.c,
	armulator/startup/libcfunc.c, armulator/startup/linkcmds,
	armulator/startup/swi.h, armulator/startup/syscalls.c,
	armulator/startup/trap.S: Removed.

2007-05-15      Ray Xu <rayx.cn@gmail.com>

	* shared/abort/abort.c, shared/abort/simple_abort.c: New files.
