@@ -15,10 +15,7 @@
 
 #include <stdio.h>
 #include <stdlib.h>
-#include <assert.h>
 #include <unistd.h>
-#undef __assert
-void __assert (const char *file, int line, const char *msg);
 
 #include <bsp.h>
 #include <rtems/bspIo.h>
@@ -94,33 +91,6 @@ isr_is_on(const rtems_irq_connect_data *irq)
     return 0;
   else
     return 1;
-}
-
-void __assert (const char *file, int line, const char *msg)
-{
-    static   char exit_msg[] = "EXECUTIVE SHUTDOWN! Any key to reboot...";
-  unsigned char  ch;
-
-  /*
-   * Note we cannot call exit or printf from here,
-   * assert can fail inside ISR too
-   */
-
-   /*
-   * Close console
-   */
-  close(2);
-  close(1);
-  close(0);
-
-  printk("\nassert failed: %s: ", file);
-  printk("%d: ", line);
-  printk("%s\n\n", msg);
-  printk(exit_msg);
-  ch = BSP_poll_char();
-  printk("\n\n");
-  rtemsReboot();
-
 }
 
 /*-------------------------------------------------------------------------+
