@@ -1,3 +1,7 @@
+2008-02-15	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* shared/comm/console.c: Do not have BSP specific __assert.
+
 2007-11-03      Ray Xu <rayx.cn@gmail.com>
 
         * shared/abort/simple_abort.c: Add veneer for ARM<->Thumb
